# thaifastembed

./: .gitignore  Cargo.toml  Makefile  README.md  example.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
src/: bm25.rs  lib.rs  sparse_embedding.rs  tokenizer.rs
tests/: test_custom_dictionary.py  test_text_processor.py  test_thai_bm25.py
thaifastembed/: __init__.py  text_processor.py  utils.py
