[package]
name = "thaifastembed"
version = "0.1.2"
edition = "2021"

[lib]
name = "thaifastembed_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
rayon = "1.10"
hashbrown = "0.15"
unicode-segmentation = "1.11"
nlpo3 = "1.4.0"
numpy = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
fnv = "1.0"
murmur3 = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3