[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.poetry]
name = "thaifastembed"
version = "0.1.2"
description = "High-performance BM25 sparse embeddings library optimized for Thai text processing."
authors = ["porameht <poramehtkh@gmail.com>"]
readme = "README.md"
keywords = ["thai", "nlp", "bm25", "sparse-embeddings", "qdrant", "hybrid-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[tool.poetry.urls]
Repository = "https://github.com/porameht/thaifastembed"
Homepage = "https://github.com/porameht/thaifastembed"
Documentation = "https://github.com/porameht/thaifastembed#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "thaifastembed.thaifastembed_rust"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10.0"
numpy = [
    { version = ">=1.21", python = ">=3.10,<3.12" },
    { version = ">=1.26", python = ">=3.12,<3.13" },
    { version = ">=2.1.0", python = ">=3.13" },
    { version = ">=1.21,<2.1.0", python = "<3.10" },
]
mmh3 = "4.0.0"
pythainlp = "5.1.2"
py-rust-stemmers = "0.1.5"
scikit-learn = "1.7.1"
tzdata = "^2024.1" # Add this line for PyThaiNLP timezone support

[tool.poetry.group.dev.dependencies]
maturin = "^1.9.4"

